--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.env_sys
 
 # Spyder project settings
 .spyderproject
@@ -160,3 +161,5 @@ cython_debug/
 #.idea/
 
 *.pem
+collections/
+test1_accessKeys.csv
